HTML CSS Full blocks- Slider and Featured Image Wrap Updated

--- a/Lab11 HTML CSS Full blocks/index.html
+++ b/Lab11 HTML CSS Full blocks/index.html
@@ -15,5 +15,16 @@
         </div>
         <div id="menuWrap"></div>
     </div>
+
+    <div id="contentWrap">
+        <div class="slider"></div>
+        <div id="featuredImgWrap">
+            <div class="featuredBox" style="background-color: aqua;">a</div>
+            <div class="featuredBox" style="background-color: gray;">b</div>
+            <div class="featuredBox" style="background-color: yellowgreen;">c</div>
+            <div class="featuredBox" style="background-color: #ffff00;">d</div>
+        </div>
+    </div>
+    <div id="footerWrap"></div>
 </body>
 </html>
